# selenium-rozetka-cli

./: README.md  pyproject.toml
src/: main.py
